--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 # test gitWorkFlow
 test.txt
 # jupyter notebook checkpoints
-.ipynb_checkpoints
+*.ipynb_checkpoints*
 
 #_pycache_
-_pycache_/ 
-NN/_pycache_/
+/_pycache_/ *
+/NN/_pycache_/*
